Ignore .idea/ generated by AppCode

--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ playground.xcworkspace
 # Package.pins
 .build/
 
+# AppCode
+.idea/
+
 # Carthage
 #
 # Add this line if you want to avoid checking in source code from Carthage dependencies.
